# matformer

./: .gitignore  Proposte_LLM.md  README.md  Untitled.ipynb  baby.json  debug_masked.jsonl  entropy_model_inference.py  index.html  inference.py  inference_code.py  legacy_trainer.py  matformer_piplist.txt  note_codice.md  nuovo_mdat.py  pyproject.toml  readme.md  split_atlas_ds.py  test_mask.py  train_all.sh  train_bert_model.py  train_blt_model.py  train_classifier_head.py  train_entropy_model.py  train_grid_search.py  train_model.py  train_tokenizer.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  test_tae-checkpoint.ipynb
Test/: mdat.db
appoggio/: Untitled.ipynb  analisi_forme_tensori_attention.ipynb  analyse_entropy.ipynb  attention_old.py  attention_wip.py  bert_test.py  bert_test2.py  debug_mdat.txt  diffusion.py  entropy_make_patches.py  entropy_model_inference.py  esperimenti_moe.ipynb  gpt_test.py  gpt_test2.py  old_maskbuilder.py  train_bert_model.py  train_blt_model.py  train_entropy_model.py  vae_patches.ipynb  vecchio_mdat.py  working_tokenizer.py
assets/: .~lock.nuovo_readme.odt#  Note sul codice.doc  blt_diagram.ppt  matformer.doc  matformer_diagram.ppt  nuovo_readme.odt  ristrutturazione_mdat.txt
char_autoencoder/: autoencoders.py  config_medium.json  config_micro.json  config_minuscolo.json  config_small.json  config_small_768.json  config_tiny.json  datasets.py  inference.py  train_char_ae.py
configs/: albertone_liberwiki_adam.json  babyLM_piccolo.json  entropy_liberwiki.json  entropy_small.json  gpt_textpatch.json  medio_albertino_muon.json  (+17 more)
(+319 files in other folders)
